--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
       with:
         api_token: ${{ secrets.NEOCITIES_API_KEY }}
         cleanup: true
-        dist_dir: . # Change to fold your site is in, it's set to the root by default
+        dist_dir: public # Change to fold your site is in, it's set to the root by default
